# WebLease

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  lease.py  pyproject.toml  web.py
.github/workflows/: actions.yaml
jupyter/: spreadsheet.ipynb  spreadsheet.py
templates/: format.html  header.html  index.html
tests/: conftest.py
tests/files/: input.csv  input.fwf
tests/loading/: test_convert.py  test_download.py  test_download_mock.py
tests/models/: test_utils.py
weblease/: importer.py  models.py  storage.py
weblease/loading/: __init__.py  convert.py  download.py  utils.py
weblease/models/: enum_types.py  field_types.py  models.py  utils.py
