# Formatters
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
show_error_codes = true
show_error_context = true
strict = true
exclude = [
    'tests/'
]

[tool.pylint."FORMAT"]
max-line-length=100
good-names="df"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods"
    ]

# Unittests
[tool.ward]
path = "tests"

# Packaging
[tool.poetry]
name = "weblease"
version = "2.0.0"
description = ""
authors = ["Brendan Cazier <520246+cazier@users.noreply.github.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^2.2.2"
beautifulsoup4 = "^4.11.1"
Jinja2 = "^3.1.2"
tortoise-orm = "^0.19.2"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
types-beautifulsoup4 = "^4.11.6"
mypy = "^0.982"
pylint = "^2.15.5"
black = "^22.10.0"
rich = "^12.6.0"
ipython = "^8.5.0"
pandas = "^1.5.1"
pandas-stubs = "^1.5.1.221024"
ward = "^0.66.1b0"
respx = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
