[tool.black]
line-length = 100

[tool.isort]
line_length = 100
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
show_error_codes = true
show_error_context = true
strict = true

[tool.pylint.'FORMAT']
max-line-length=100

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'missing-module-docstring',
    'missing-class-docstring',
    'missing-function-docstring',
    'too-few-public-methods'
    ]

[tool.poetry]
name = "weblease"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.5"
beautifulsoup4 = "^4.11.1"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
types-beautifulsoup4 = "^4.11.6"
mypy = "^0.982"
pylint = "^2.15.5"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
